--- a/Bin/Config/BuildConfig.ini
+++ b/Bin/Config/BuildConfig.ini
@@ -1,20 +1,26 @@
 #出包的前缀
-ROM_AUTHOR=HaisTeam
+ROM_AUTHOR=My
 
 #标签、版本
-ROM_TAG=V3
+ROM_TAG=HaisTeam
 
 #工程目录名称
 ROM_ID=Test
 
-#压缩等级1-9，越大压缩等级越高速度越慢
+#压缩等级1-9，设置9级br为12、7z为9。越大压缩等级越高速度越慢
 ZIP_LEVEL=5
 
-#是否智能精简，根据文件名自带搜寻目录
-IS_AI_DEL=TRUE
+#解包后是否删除旧ROM
+IS_DEL_OLD_ROM=TRUE
 
-#是否添加Magisk，目前为Magisk23
+#是否智能精简，根据文件名自带搜寻目录
+IS_AI_DEL=FALSE
+
+#是否添加Magisk，目前为Magisk23011
 IS_MAGISK=TRUE
+
+#是否开启强制加密,FALSE为去除
+IS_ENCRYPTION=FALSE
 
 #是否USB包，动态分区的K30P、VAB分区的K40 已测试通过
 IS_USB=FALSE
