--- a/Bin/Config/BuildConfig.ini
+++ b/Bin/Config/BuildConfig.ini
@@ -1,17 +1,17 @@
 #出包的前缀
-ROM_AUTHOR=My
+ROM_AUTHOR=Hais
 
 #标签、版本
-ROM_TAG=HaisTeam
+ROM_TAG=V4
 
 #工程目录名称
-ROM_ID=Test
+ROM_ID=Output
 
 #压缩等级1-9，设置9级br为12、7z为9。越大压缩等级越高速度越慢
 ZIP_LEVEL=5
 
 #解包后是否删除旧ROM
-IS_DEL_OLD_ROM=TRUE
+IS_DEL_OLD_ROM=FALSE
 
 #是否智能精简，根据文件名自带搜寻目录
 IS_AI_DEL=FALSE
@@ -26,14 +26,10 @@ IS_ENCRYPTION=FALSE
 IS_USB=FALSE
 
 #是否包的类型 DYNAMIC、VAB、NORMAL，不用修改，做包时系统自动识别
-USB_TYPE=NORMAL
+ROM_TYPE=VAB
 
-#自动上传阿里云是否开启 TRUE 为开启
-Ali_IS_OPEN=FALSE
-#网盘中的一级目录
+#自动上传阿里云
+Ali_IS_OPEN=TRUE
 Ali_ROOT_DIR_NAME=Hais纯净精简包
-#网盘中的二级目录
 Ali_ROOT_2_DIR_NAME=V3-PureSimplify
-#网盘的Token
-Ali_TOKEN=4e5b98db16a24827xxxxxxx
-
+Ali_TOKEN=c6a870abdfbass1a907068b0e
