--- a/Bin/Config/BuildConfig.ini
+++ b/Bin/Config/BuildConfig.ini
@@ -14,7 +14,7 @@ ZIP_LEVEL=5
 IS_DEL_OLD_ROM=FALSE
 
 #是否智能精简，根据文件名自带搜寻目录
-IS_AI_DEL=FALSE
+IS_AI_DEL=TRUE
 
 #是否添加Magisk，目前为Magisk23011
 IS_MAGISK=TRUE
@@ -23,10 +23,10 @@ IS_MAGISK=TRUE
 IS_ENCRYPTION=FALSE
 
 #是否USB包，动态分区的K30P、VAB分区的K40 已测试通过
-IS_USB=FALSE
+IS_USB=TRUE
 
 #是否包的类型 DYNAMIC、VAB、NORMAL，不用修改，做包时系统自动识别
-ROM_TYPE=VAB
+ROM_TYPE=DYNAMIC
 
 #自动上传阿里云
 Ali_IS_OPEN=TRUE
