--- a/Bin/Config/BuildConfig.ini
+++ b/Bin/Config/BuildConfig.ini
@@ -19,8 +19,8 @@ IS_AI_DEL=FALSE
 #是否添加Magisk，目前为Magisk23011
 IS_MAGISK=TRUE
 
-#是否开启强制加密,FALSE为去除
-IS_ENCRYPTION=FALSE
+#是否开启强制加密,TRUE为去除
+IS_ENCRYPTION=TRUE
 
 #是否USB包，动态分区的K30P、VAB分区的K40 已测试通过
 IS_USB=FALSE
